--- a/index.html
+++ b/index.html
@@ -46,14 +46,12 @@
 <body>
     <nav class="_nav-root-main">
         <ul class="_nav-root">
+            
             <li class="_nav-root-item">
-                <a class="_nav-root-link" href="/dist/test.html">Test Page</a>
+                <a class="_nav-root-link" href="/ToothPasteshop/dist/main-shop-page.html">Shop Page</a>
             </li>
             <li class="_nav-root-item">
-                <a class="_nav-root-link" href="/dist/main-shop-page.html">Shop Page</a>
-            </li>
-            <li class="_nav-root-item">
-                <a class="_nav-root-link" href="/dist/private-account.html">Account Page</a>
+                <a class="_nav-root-link" href="/ToothPasteshop/dist/private-account.html">Account Page</a>
             </li>
         </ul>
     </nav>  
